--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev:both": "concurrently \"convex dev\" \"next dev --turbopack\"",
     "dev:next": "next dev --turbopack",
     "dev:convex": "convex dev",
+    "check:ts": "npx tsc --noEmit --skipLibCheck",
     "build": "next build --turbopack",
     "start": "next start"
   },
   "dependencies": {
+    "@convex-dev/auth": "^0.0.88",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
