--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:both": "concurrently \"convex dev\" \"next dev --turbopack\"",
     "dev:next": "next dev --turbopack",
     "dev:convex": "convex dev",
+    "seed": "node scripts/seed.js",
     "check:ts": "npx tsc --noEmit --skipLibCheck",
     "build": "next build --turbopack",
     "start": "next start"
@@ -41,6 +42,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
+    "dotenv": "^17.2.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
