--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev:next": "next dev --turbopack",
     "dev:convex": "convex dev",
     "seed": "node scripts/seed.js",
+    "create-admin": "node scripts/create-admin.js",
+    "test-admin": "node scripts/test-admin.js",
+    "check-env": "node scripts/check-env.js",
     "check:ts": "npx tsc --noEmit --skipLibCheck",
     "build": "next build --turbopack",
     "start": "next start"
@@ -22,10 +25,12 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.26.2",
     "date-fns": "^4.1.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
@@ -37,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
