--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "dev:next": "next dev --turbopack",
     "dev:convex": "convex dev",
     "seed": "node scripts/seed.js",
-    "create-admin": "node scripts/create-admin.js",
-    "test-admin": "node scripts/test-admin.js",
+    "admin:init": "node scripts/init-admin.js",
+    "admin:add": "node scripts/manage-admins.js add",
+    "admin:list": "node scripts/manage-admins.js list",
+    "admin:deactivate": "node scripts/manage-admins.js deactivate",
+    "admin:reactivate": "node scripts/manage-admins.js reactivate",
     "check-env": "node scripts/check-env.js",
     "check:ts": "npx tsc --noEmit --skipLibCheck",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "knip": "knip"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
+    "@oslojs/jwt": "^0.3.0",
+    "@oslojs/otp": "^1.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -28,11 +36,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.26.2",
-    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.542.0",
@@ -46,12 +52,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.2",
+    "knip": "^5.66.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
