--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "^1.0.0",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.2",
     "knip": "^5.66.0",
